<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>de.phillip.TowerDefense</groupId>
  <artifactId>TowerDefense</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>Tower Defense Game</name>
  <properties>
  	<maven.compiler.target>17</maven.compiler.target>
  	<maven.compiler.source>17</maven.compiler.source>
  </properties>
  <dependencies>
  	<dependency>
  		<groupId>org.openjfx</groupId>
  		<artifactId>javafx-controls</artifactId>
  		<version>22-ea+11</version>
  	</dependency>
  	<dependency>
		  <groupId>org.openjfx</groupId>
		  <artifactId>javafx-fxml</artifactId>
		  <version>22-ea+11</version>
	  </dependency>
	  <dependency>
		  <groupId>org.openjfx</groupId>
		  <artifactId>javafx-media</artifactId>
		  <version>22-ea+11</version>
	  </dependency>
	  <dependency>
		<groupId>com.fasterxml.jackson.core</groupId>
    	<artifactId>jackson-databind</artifactId>
   		<version>2.16.0</version>
	  </dependency>
  </dependencies>
  <build>
	  <plugins>
		  <plugin>
			  <groupId> org.openjfx </groupId>
			  <artifactId> javafx-maven-plugin</artifactId>
			  <version>0.0.8</version>
			  <configuration>
				  <mainClass>de.phillip.TowerDefense</mainClass>
			  </configuration>
			  <executions>
				  <execution>
					  <configuration>
						 <mainClass> de.phillip.TowerDefensen</mainClass>
					  </configuration>
				  </execution>
				  <execution>
					  <id>debug</id>
					  <configuration>
						 <options>
							 <option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:8001</option>
						</options>
						<mainClass>de.phillip.TowerDefense</mainClass>
					  </configuration>
				  </execution>
			  </executions>
		  </plugin>
	  </plugins>
  </build>
</project>